crates/libsql-sys/bundled/src/sqlite3.h


typedef struct sqlite3 sqlite3;
  typedef SQLITE_INT64_TYPE sqlite_int64;
  typedef __int64 sqlite_int64;
  typedef long long int sqlite_int64;
typedef sqlite_int64 sqlite3_int64;
typedef sqlite_uint64 sqlite3_uint64;
typedef struct sqlite3_file sqlite3_file;
struct sqlite3_file {
  const struct sqlite3_io_methods *pMethods;  
};
typedef struct sqlite3_mutex sqlite3_mutex;
typedef const char *sqlite3_filename;
typedef struct sqlite3_vfs sqlite3_vfs;
typedef void (*sqlite3_syscall_ptr)(void);
struct sqlite3_vfs {
  int iVersion;            
  int szOsFile;            
  int mxPathname;          
  sqlite3_vfs *pNext;      
  const char *zName;       
  void *pAppData;          
  int (*xOpen)(sqlite3_vfs*, sqlite3_filename zName, sqlite3_file*,
               int flags, int *pOutFlags);
  int (*xDelete)(sqlite3_vfs*, const char *zName, int syncDir);
  int (*xAccess)(sqlite3_vfs*, const char *zName, int flags, int *pResOut);
  int (*xFullPathname)(sqlite3_vfs*, const char *zName, int nOut, char *zOut);
  void *(*xDlOpen)(sqlite3_vfs*, const char *zFilename);
  void (*xDlError)(sqlite3_vfs*, int nByte, char *zErrMsg);
  void (*(*xDlSym)(sqlite3_vfs*,void*, const char *zSymbol))(void);
  void (*xDlClose)(sqlite3_vfs*, void*);
  int (*xRandomness)(sqlite3_vfs*, int nByte, char *zOut);
  int (*xSleep)(sqlite3_vfs*, int microseconds);
  int (*xCurrentTime)(sqlite3_vfs*, double*);
  int (*xGetLastError)(sqlite3_vfs*, int, char *);
  int (*xCurrentTimeInt64)(sqlite3_vfs*, sqlite3_int64*);
  int (*xSetSystemCall)(sqlite3_vfs*, const char *zName, sqlite3_syscall_ptr);
  sqlite3_syscall_ptr (*xGetSystemCall)(sqlite3_vfs*, const char *zName);
  const char *(*xNextSystemCall)(sqlite3_vfs*, const char *zName);
};
typedef struct sqlite3_value sqlite3_value;
typedef struct sqlite3_context sqlite3_context;
typedef struct sqlite3_vtab sqlite3_vtab;
typedef struct sqlite3_index_info sqlite3_index_info;
typedef struct sqlite3_vtab_cursor sqlite3_vtab_cursor;
typedef struct sqlite3_module sqlite3_module;
struct sqlite3_module {
  int iVersion;
  int (*xCreate)(sqlite3*, void *pAux,
               int argc, const char *const*argv,
               sqlite3_vtab **ppVTab, char**);
  int (*xConnect)(sqlite3*, void *pAux,
               int argc, const char *const*argv,
               sqlite3_vtab **ppVTab, char**);
  int (*xBestIndex)(sqlite3_vtab *pVTab, sqlite3_index_info*);
  int (*xDisconnect)(sqlite3_vtab *pVTab);
  int (*xDestroy)(sqlite3_vtab *pVTab);
  int (*xOpen)(sqlite3_vtab *pVTab, sqlite3_vtab_cursor **ppCursor);
  int (*xClose)(sqlite3_vtab_cursor*);
  int (*xFilter)(sqlite3_vtab_cursor*, int idxNum, const char *idxStr,
                int argc, sqlite3_value **argv);
  int (*xNext)(sqlite3_vtab_cursor*);
  int (*xEof)(sqlite3_vtab_cursor*);
  int (*xColumn)(sqlite3_vtab_cursor*, sqlite3_context*, int);
  int (*xRowid)(sqlite3_vtab_cursor*, sqlite3_int64 *pRowid);
  int (*xUpdate)(sqlite3_vtab *, int, sqlite3_value **, sqlite3_int64 *);
  int (*xBegin)(sqlite3_vtab *pVTab);
  int (*xSync)(sqlite3_vtab *pVTab);
  int (*xCommit)(sqlite3_vtab *pVTab);
  int (*xRollback)(sqlite3_vtab *pVTab);
  int (*xFindFunction)(sqlite3_vtab *pVtab, int nArg, const char *zName,
                       void (**pxFunc)(sqlite3_context*,int,sqlite3_value**),
                       void **ppArg);
  int (*xRename)(sqlite3_vtab *pVtab, const char *zNew);
  int (*xSavepoint)(sqlite3_vtab *pVTab, int);
  int (*xRelease)(sqlite3_vtab *pVTab, int);
  int (*xRollbackTo)(sqlite3_vtab *pVTab, int);
  int (*xShadowName)(const char*);
  int (*xPreparedSql)(sqlite3_vtab_cursor*, const char*);
};
struct sqlite3_index_info {
  int nConstraint;           
  struct sqlite3_index_constraint {
     int iColumn;              
     unsigned char op;         
     unsigned char usable;     
     int iTermOffset;          
  } *aConstraint;            
  int nOrderBy;              
  struct sqlite3_index_orderby {
     int iColumn;              
     unsigned char desc;       
  } *aOrderBy;               
  struct sqlite3_index_constraint_usage {
    int argvIndex;           
    unsigned char omit;      
  } *aConstraintUsage;
  int idxNum;                
  char *idxStr;              
  int needToFreeIdxStr;      
  int orderByConsumed;       
  double estimatedCost;           
  sqlite3_int64 estimatedRows;    
  int idxFlags;              
  sqlite3_uint64 colUsed;    
};
SQLITE_API int sqlite3_create_module(
  sqlite3 *db,               
  const char *zName,         
  const sqlite3_module *p,   
  void *pClientData          
);
SQLITE_API int sqlite3_create_module_v2(
  sqlite3 *db,               
  const char *zName,         
  const sqlite3_module *p,   
  void *pClientData,         
  void(*xDestroy)(void*)     
);
SQLITE_API int sqlite3_drop_modules(
  sqlite3 *db,                
  const char **azKeep         
);
struct sqlite3_vtab {
  const sqlite3_module *pModule;  
  int nRef;                       
  char *zErrMsg;                  
};
struct sqlite3_vtab_cursor {
  sqlite3_vtab *pVtab;      
};
SQLITE_API int sqlite3_declare_vtab(sqlite3*, const char *zSQL);
SQLITE_API int sqlite3_overload_function(sqlite3*, const char *zFuncName, int nArg);
typedef struct sqlite3_blob sqlite3_blob;
SQLITE_API int sqlite3_blob_open(
  sqlite3*,
  const char *zDb,
  const char *zTable,
  const char *zColumn,
  sqlite3_int64 iRow,
  int flags,
  sqlite3_blob **ppBlob
);
SQLITE_API int sqlite3_blob_reopen(sqlite3_blob *, sqlite3_int64);
SQLITE_API int sqlite3_blob_close(sqlite3_blob *);
SQLITE_API int sqlite3_blob_bytes(sqlite3_blob *);
SQLITE_API int sqlite3_blob_read(sqlite3_blob *, void *Z, int N, int iOffset);
SQLITE_API int sqlite3_blob_write(sqlite3_blob *, const void *z, int n, int iOffset);
SQLITE_API sqlite3_vfs *sqlite3_vfs_find(const char *zVfsName);
SQLITE_API int sqlite3_vfs_register(sqlite3_vfs*, int makeDflt);
SQLITE_API int sqlite3_vfs_unregister(sqlite3_vfs*);
typedef struct libsql_wal_methods libsql_wal_methods;
SQLITE_API libsql_wal_methods *libsql_wal_methods_find(const char *zName);
SQLITE_API int libsql_wal_methods_register(libsql_wal_methods*);
SQLITE_API int libsql_wal_methods_unregister(libsql_wal_methods*);
SQLITE_API libsql_wal_methods *libsql_wal_methods_next(libsql_wal_methods *w);
SQLITE_API const char *libsql_wal_methods_name(libsql_wal_methods *w);
SQLITE_API sqlite3_mutex *sqlite3_mutex_alloc(int);
SQLITE_API void sqlite3_mutex_free(sqlite3_mutex*);
SQLITE_API void sqlite3_mutex_enter(sqlite3_mutex*);
SQLITE_API int sqlite3_mutex_try(sqlite3_mutex*);
SQLITE_API void sqlite3_mutex_leave(sqlite3_mutex*);
typedef struct sqlite3_snapshot {
  unsigned char hidden[48];
} sqlite3_snapshot;
struct libsql_pghdr {
  sqlite3_pcache_page *pPage;    
  void *pData;                   
  void *pExtra;                  
  PCache *pCache;                
  PgHdr *pDirty;                 
  Pager *pPager;                 
  unsigned int pgno;             
  unsigned int pageHash;         
  unsigned short flags;          
  unsigned long long nRef;       
  PgHdr *pDirtyNext;             
  PgHdr *pDirtyPrev;             
};
typedef struct libsql_pghdr libsql_pghdr;
typedef struct libsql_wal libsql_wal;
typedef struct libsql_wal_methods {
  int iVersion; 
  int (*xOpen)(sqlite3_vfs*, sqlite3_file* , const char*, int no_shm_mode, long long max_size, struct libsql_wal_methods*, libsql_wal**);
  int (*xClose)(libsql_wal*, sqlite3* db, int sync_flags, int nBuf, unsigned char *zBuf);
  void (*xLimit)(libsql_wal*, long long limit);
  int (*xBeginReadTransaction)(libsql_wal *, int *);
  void (*xEndReadTransaction)(libsql_wal *);
  int (*xFindFrame)(libsql_wal *, unsigned int, unsigned int *);
  int (*xReadFrame)(libsql_wal *, unsigned int, int, unsigned char *);
  unsigned int (*xDbsize)(libsql_wal *pWal);
  int (*xBeginWriteTransaction)(libsql_wal *pWal);
  int (*xEndWriteTransaction)(libsql_wal *pWal);
  int (*xUndo)(libsql_wal *pWal, int (*xUndo)(void *, unsigned int), void *pUndoCtx);
  void (*xSavepoint)(libsql_wal *pWal, unsigned int *aWalData);
  int (*xSavepointUndo)(libsql_wal *pWal, unsigned int *aWalData);
  int (*xFrames)(libsql_wal *pWal, int, libsql_pghdr *, unsigned int, int, int);
  int (*xCheckpoint)(
    libsql_wal *pWal,                      
    sqlite3 *db,                    
    int eMode,                      
    int (*xBusy)(void*),            
    void *pBusyArg,                 
    int sync_flags,                 
    int nBuf,                       
    unsigned char *zBuf,                       
    int *pnLog,                     
    int *pnCkpt                     
  );
  int (*xCallback)(libsql_wal *pWal);
  int (*xExclusiveMode)(libsql_wal *pWal, int op);
  int (*xHeapMemory)(libsql_wal *pWal);
  int (*xSnapshotGet)(libsql_wal *pWal, sqlite3_snapshot **ppSnapshot);
  void (*xSnapshotOpen)(libsql_wal *pWal, sqlite3_snapshot *pSnapshot);
  int (*xSnapshotRecover)(libsql_wal *pWal);
  int (*xSnapshotCheck)(libsql_wal *pWal, sqlite3_snapshot *pSnapshot);
  void (*xSnapshotUnlock)(libsql_wal *pWal);
  int (*xFramesize)(libsql_wal *pWal);
  sqlite3_file *(*xFile)(libsql_wal *pWal);
  int (*xWriteLock)(libsql_wal *pWal, int bLock);
  void (*xDb)(libsql_wal *pWal, sqlite3 *db);
  int (*xPathnameLen)(int origPathname);
  void (*xGetWalPathname)(char *buf, const char *orig, int orig_len);
  int (*xPreMainDbOpen)(libsql_wal_methods *methods, const char *main_db_path);
  int bUsesShm;
  const char *zName;
  struct libsql_wal_methods *pNext;
} libsql_wal_methods;
libsql_wal_methods* libsql_wal_methods_find(const char *zName);
struct libsql_wal {
  sqlite3_vfs *pVfs;                  
  sqlite3_file *pDbFd;                
  sqlite3_file *pWalFd;               
  unsigned int iCallback;             
  long long mxWalSize;                     
  int nWiData;                        
  int szFirstBlock;                   
  volatile unsigned int **apWiData;   
  unsigned int szPage;                
  short readLock;                     
  unsigned char syncFlags;            
  unsigned char exclusiveMode;        
  unsigned char writeLock;            
  unsigned char ckptLock;             
  unsigned char readOnly;             
  unsigned char truncateOnCommit;     
  unsigned char syncHeader;           
  unsigned char padToSectorBoundary;  
  unsigned char bShmUnreliable;       
  WalIndexHdr hdr;                    
  unsigned int minFrame;              
  unsigned int iReCksum;              
  const char *zWalName;               
  unsigned int nCkpt;                 
  unsigned char lockError;            
  WalIndexHdr *pSnapshot;             
  sqlite3 *db;
  libsql_wal_methods *pMethods;       
  void *pMethodsData;                 
};
typedef struct libsql_wal libsql_wal;